# adventOfCode2024

1th/c/: CMakeLists.txt
1th/c/include/: distanceCalculator.h
1th/c/src/: distanceCalculator.c  main.c
2th/c/: .gitignore  CMakeLists.txt
2th/c/.cache/clangd/index/: main.c.550F63FA0742AA0C.idx  main.c.5FE5CB7BA0CF1E1D.idx  parse_report.c.B7075688A1995D81.idx  parse_report.h.E3F42B20342C625C.idx  safety_check.c.0E6806BE5E67DF3A.idx  safety_check.h.77C72D103AE2755A.idx  utils.c.7E95D595E670C47D.idx  utils.h.1FC0E6A2E314D175.idx
2th/c/includes/: parse_report.h  safety_check.h  utils.h
2th/c/src/: main.c  parse_report.c  safety_check.c  utils.c
3th/: CMakeLists.txt
3th/src/: main.c  part2.c
